kubernetes/09-easyshop-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: easyshop-service
  namespace: easyshop
  annotations:
    appgw.ingress.kubernetes.io/backend-protocol: "http"
    appgw.ingress.kubernetes.io/backend-hostname: "buildandship.space"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: easyshop  # Selects pods with app=easyshop label
